2010-12-03  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/dumper.c: Put extar error message in separate files to
	  reduce the size of the log file.

2010-12-01  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/chunker.c, xfer-src/element-glue.c: Prefer IPV4 over IPV6.

2010-12-01  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/directtcp.h: DirectTCPAddr is a sockaddr_union.
	* common-src/sockaddr-util.c (str_sockaddr_no_port): new function.
	* common-src/sockaddr-util.h (str_sockaddr_no_port): New prototype.
	* perl/amglue/directtcp.swg: Swig new DirectTCPAddr.
	* server-src/dumper.c: Parse IPV6 in dataport_list.
	* ndmp-src/ndmpconnobj.c, perl/Amanda/Device.swg,
	  perl/Amanda/Taper/Worker.pm, perl/Amanda/Xfer.swg,
	  server-src/chunker.c, xfer-src/dest-directtcp-connect.c,
	  xfer-src/element-glue.c, xfer-src/source-directtcp-connect.c,
	  xfer-src/source-directtcp-listen.c, xfer-src/xfer-element.h,
	  xfer-src/xfer-test.c: Use new DirectTCPAddr.

2010-11-30  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/conffile.c: Add pre-amcheck, post-amcheck, pre-estimate,
	  post-estimate, pre-backup and post-backup to execute-on of script.
	* common-src/conffile.h: Add EXECUTE_ON_* constants.
	* application-src/amlog-script.pl: Add new execute-on.
	* common-src/amxml.c: Parse new execute-on.
	* man/xml-source/amanda.conf.5.xml: Document them.
	* perl/Amanda/Config.swg: Add new EXECUTE_ON_* constants.
	* perl/Amanda/Script.pm: Add new execute-on.
	* server-src/amcheck.c: Call run_server_global_scripts.
	* server-src/diskfile.c (get_hostlist): Return the host list.
	* server-src/diskfile.h (get_hostlist): Add prototype.
	* server-src/driver.c: Call run_server_global_scripts.
	* server-src/planner.c: Call run_server_global_scripts.
	* server-src/server_util.c (run_server_global_scripts): New function.
	* server-src/server_util.h (run_server_global_scripts): Prototype.

2010-11-30  Jean-Louis Martineau <martineau@zmanda.com>